[gd_scene load_steps=31 format=3 uid="uid://6ux65tf0c4jp"]

[ext_resource type="Script" path="res://Scripts/Demo Player.gd" id="1_v4hoj"]
[ext_resource type="PackedScene" uid="uid://jl32w4b17en8" path="res://Weapon System/Weapon Models/rifle.glb" id="2_dik6a"]
[ext_resource type="Script" path="res://Weapon System/Weapon System.gd" id="2_e3su7"]
[ext_resource type="PackedScene" uid="uid://c5kyf4507eu10" path="res://Weapon System/Weapon Models/pistol.glb" id="3_6wuuw"]
[ext_resource type="Resource" uid="uid://cjxlorr44eday" path="res://Weapon System/Weapon Resources/rifle.tres" id="3_o0htw"]
[ext_resource type="PackedScene" uid="uid://cj2blfc0mu4md" path="res://Weapon System/Weapon Models/knife.glb" id="4_tn2g7"]
[ext_resource type="Resource" uid="uid://bp3aqbttii8mn" path="res://Weapon System/Weapon Resources/pistol.tres" id="4_u4iqe"]
[ext_resource type="Resource" uid="uid://jc5l0ibtofv8" path="res://Weapon System/Weapon Resources/knife.tres" id="5_trej6"]
[ext_resource type="PackedScene" uid="uid://bfvi6myvtawd8" path="res://Weapon System/Weapon Models/sniper.glb" id="5_w5nut"]
[ext_resource type="Resource" uid="uid://do7m2fu0tdgkl" path="res://Weapon System/Weapon Resources/sniper.tres" id="6_34746"]
[ext_resource type="FontFile" uid="uid://bly7gu5wstxhh" path="res://Fonts/palatinolinotype_roman.ttf" id="11_1wypx"]
[ext_resource type="Texture2D" uid="uid://rxvem46lihaa" path="res://HUD System/hp icon.png" id="12_3nq4x"]
[ext_resource type="Texture2D" uid="uid://bm155reoivpyg" path="res://HUD System/stamina icon.png" id="13_xgdpd"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_1s30x"]
radius = 0.3
height = 1.84

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_tgqf6"]
radius = 0.3
height = 1.84

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_4o3t2"]
radius = 0.3
height = 0.9

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_4hqqq"]
radius = 0.22
height = 0.52

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_yicdc"]
radius = 0.3
height = 1.83

[sub_resource type="Animation" id="Animation_5ello"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("rifle:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.132792, -0.416651, 0.190691)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("rifle:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, -3.14159, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("rifle:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("pistol:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("pistol:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.105903, -0.159323, -0.150875)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("pistol:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.0349066, -3.10669, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("knife:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("knife:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.0986285, 0.13352, -0.816136)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("knife:rotation")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.120428, 1.7558, 0.47822)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("sniper:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("sniper:rotation")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-1.67726, 3.0456, 0)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("sniper:position")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.245366, -0.328813, -0.288663)]
}

[sub_resource type="Animation" id="Animation_sf8ds"]
resource_name = "knife Init"
length = 0.4
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("knife:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.01),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("knife:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.0986285, -0.255296, 0.282977), Vector3(0.0986285, 0.13352, -0.816136)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("knife:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.120428, -1.5708, 0.47822), Vector3(0.120428, 1.7558, 0.47822)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("pistol:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("rifle:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("sniper:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_pu8c0"]
resource_name = "knife Term"
length = 0.4
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("knife:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.39),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("knife:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.0986285, 0.13352, -0.816136), Vector3(0.0986285, -0.255296, 0.282977)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("knife:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.120428, 1.7558, 0.47822), Vector3(0.120428, -1.5708, 0.47822)]
}

[sub_resource type="Animation" id="Animation_otpao"]
resource_name = "pistol Init"
length = 0.4
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("pistol:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.01),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pistol:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, -0.3, 0), Vector3(0.105903, -0.159323, -0.150875)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("pistol:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(2.44346, -3.14159, 0), Vector3(-0.0349066, -3.10669, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("rifle:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("knife:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("sniper:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_o1i7i"]
resource_name = "pistol Term"
length = 0.4
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("pistol:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.39),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pistol:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.105903, -0.159323, -0.150875), Vector3(0, -0.3, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("pistol:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-0.0349066, -3.10669, 0), Vector3(2.44346, -3.14159, 0)]
}

[sub_resource type="Animation" id="Animation_sianb"]
resource_name = "rifle Init"
length = 0.4
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("rifle:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.133, -0.6, 0.191), Vector3(0.132792, -0.416651, 0.190691)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("rifle:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.418879, -3.14159, 0), Vector3(0, -3.14159, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("rifle:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.01),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("pistol:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("knife:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("sniper:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_lcrqk"]
resource_name = "rifle Term"
length = 0.4
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("rifle:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.132792, -0.416651, 0.190691), Vector3(0.133, -0.6, 0.191)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("rifle:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, -3.14159, 0), Vector3(0.418879, -3.14159, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("rifle:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.39),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_1kw2d"]
resource_name = "sniper Init"
length = 0.4
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sniper:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.01),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sniper:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-1.67726, 3.0456, 0), Vector3(-0.0471239, 3.0456, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sniper:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.245366, -0.328813, -0.288663), Vector3(0.245366, -0.328813, -0.288663)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("rifle:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("pistol:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("knife:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ssx3p"]
resource_name = "sniper Term"
length = 0.4
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sniper:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.39),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sniper:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.39),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-0.0471239, 3.0456, 0), Vector3(-1.67726, 3.0456, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sniper:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.39),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.245366, -0.328813, -0.288663), Vector3(0.245366, -0.328813, -0.288663)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5tx34"]
_data = {
"RESET": SubResource("Animation_5ello"),
"knife Init": SubResource("Animation_sf8ds"),
"knife Term": SubResource("Animation_pu8c0"),
"pistol Init": SubResource("Animation_otpao"),
"pistol Term": SubResource("Animation_o1i7i"),
"rifle Init": SubResource("Animation_sianb"),
"rifle Term": SubResource("Animation_lcrqk"),
"sniper Init": SubResource("Animation_1kw2d"),
"sniper Term": SubResource("Animation_ssx3p")
}

[sub_resource type="Theme" id="Theme_fdjw4"]
default_font = ExtResource("11_1wypx")
default_font_size = 40

[sub_resource type="Theme" id="Theme_v6o45"]
default_font = ExtResource("11_1wypx")
default_font_size = 30

[node name="Demo Player" type="CharacterBody3D"]
floor_constant_speed = true
floor_block_on_wall = false
floor_max_angle = 0.872665
floor_snap_length = 1.0
script = ExtResource("1_v4hoj")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
visible = false
cast_shadow = 0
mesh = SubResource("CapsuleMesh_1s30x")
metadata/_edit_lock_ = true

[node name="Standing_CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_tgqf6")
metadata/_edit_lock_ = true

[node name="Crouching_CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.468799, 0)
shape = SubResource("CapsuleShape3D_4o3t2")
disabled = true
metadata/_edit_lock_ = true

[node name="Crawling_CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.659, 0)
shape = SubResource("CapsuleShape3D_4hqqq")
disabled = true
metadata/_edit_lock_ = true

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.919, 0)
target_position = Vector3(0, 1.84, 0)
metadata/_edit_lock_ = true

[node name="ShapeCast3D" type="ShapeCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.49012e-08, 0)
shape = SubResource("CapsuleShape3D_yicdc")
target_position = Vector3(0, 0, 0)
metadata/_edit_lock_ = true

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.558239, 0)
metadata/_edit_lock_ = true

[node name="Camera3D" type="Camera3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 4, 0, 0, 0, 1, 0, 0, 0)
metadata/_edit_lock_ = true

[node name="Weapon System" type="Node3D" parent="Head/Camera3D"]
script = ExtResource("2_e3su7")
_weapon_resources = Array[Resource("res://Weapon System/Weapon Resource.gd")]([ExtResource("3_o0htw"), ExtResource("4_u4iqe"), ExtResource("5_trej6"), ExtResource("6_34746")])
Start_Weapons = Array[String](["rifle", "pistol", "knife", "sniper"])

[node name="FPS Rig" type="Node3D" parent="Head/Camera3D/Weapon System"]

[node name="rifle" parent="Head/Camera3D/Weapon System/FPS Rig" instance=ExtResource("2_dik6a")]
transform = Transform3D(-1, 0, -2.53518e-06, 0, 1, 0, 2.53518e-06, 0, -1, 0.132792, -0.416651, 0.190691)

[node name="pistol" parent="Head/Camera3D/Weapon System/FPS Rig" instance=ExtResource("3_6wuuw")]
transform = Transform3D(-0.999391, 0.00121784, -0.0348744, 0, 0.999391, 0.0348995, 0.0348956, 0.0348783, -0.998782, 0.105903, -0.159323, -0.150875)

[node name="knife" parent="Head/Camera3D/Weapon System/FPS Rig" instance=ExtResource("4_tn2g7")]
transform = Transform3D(-0.00021794, 0.000378986, 0.00195163, 0.000913733, 0.00176277, -0.000240274, -0.00176567, 0.000865453, -0.000365235, 0.0986285, 0.13352, -0.816136)

[node name="sniper" parent="Head/Camera3D/Weapon System/FPS Rig" instance=ExtResource("5_w5nut")]
transform = Transform3D(-0.995396, -0.0953027, -0.0101848, 0, -0.106263, 0.994338, -0.0958453, 0.98976, 0.105773, 0.245366, -0.328813, -0.288663)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Head/Camera3D/Weapon System/FPS Rig"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_5tx34")
}

[node name="Crosshair" type="Label" parent="Head/Camera3D/Weapon System/FPS Rig"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "+"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HUD_System" type="Node3D" parent="Head/Camera3D"]

[node name="Bars" type="Node3D" parent="Head/Camera3D/HUD_System"]

[node name="VBoxContainer" type="VBoxContainer" parent="Head/Camera3D/HUD_System/Bars"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = -128.0
offset_right = 544.0
offset_bottom = -34.0
grow_vertical = 0
size_flags_vertical = 3
theme = SubResource("Theme_fdjw4")
theme_override_constants/separation = 10

[node name="Health" type="HBoxContainer" parent="Head/Camera3D/HUD_System/Bars/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6

[node name="Icon" type="TextureRect" parent="Head/Camera3D/HUD_System/Bars/VBoxContainer/Health"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("12_3nq4x")
expand_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="Head/Camera3D/HUD_System/Bars/VBoxContainer/Health"]
custom_minimum_size = Vector2(400, 20)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
step = 1.0
value = 80.0
show_percentage = false

[node name="Stamina" type="HBoxContainer" parent="Head/Camera3D/HUD_System/Bars/VBoxContainer"]
layout_mode = 2

[node name="Icon" type="TextureRect" parent="Head/Camera3D/HUD_System/Bars/VBoxContainer/Stamina"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("13_xgdpd")
expand_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="Head/Camera3D/HUD_System/Bars/VBoxContainer/Stamina"]
custom_minimum_size = Vector2(400, 20)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
step = 1.0
value = 90.0
show_percentage = false

[node name="Stance_State" type="Node3D" parent="Head/Camera3D/HUD_System"]

[node name="VBoxContainer" type="VBoxContainer" parent="Head/Camera3D/HUD_System/Stance_State"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 104.0
offset_top = -217.0
offset_right = 243.0
offset_bottom = -123.0
grow_vertical = 0
size_flags_horizontal = 0
theme = SubResource("Theme_v6o45")
theme_override_constants/separation = 10

[node name="Stance_State" type="HBoxContainer" parent="Head/Camera3D/HUD_System/Stance_State/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
alignment = 1

[node name="Text" type="Label" parent="Head/Camera3D/HUD_System/Stance_State/VBoxContainer/Stance_State"]
layout_mode = 2
size_flags_horizontal = 0
text = "Stance: "

[node name="Current_Stance_State" type="Label" parent="Head/Camera3D/HUD_System/Stance_State/VBoxContainer/Stance_State"]
layout_mode = 2
size_flags_horizontal = 0

[node name="Speed_State" type="HBoxContainer" parent="Head/Camera3D/HUD_System/Stance_State/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
alignment = 1

[node name="Text" type="Label" parent="Head/Camera3D/HUD_System/Stance_State/VBoxContainer/Speed_State"]
layout_mode = 2
size_flags_horizontal = 0
text = "Speed: "

[node name="Current_Speed_State" type="Label" parent="Head/Camera3D/HUD_System/Stance_State/VBoxContainer/Speed_State"]
layout_mode = 2
size_flags_horizontal = 0

[node name="Weapon Info" type="Node3D" parent="Head/Camera3D/HUD_System"]

[connection signal="animation_finished" from="Head/Camera3D/Weapon System/FPS Rig/AnimationPlayer" to="Head/Camera3D/Weapon System" method="_on_animation_player_animation_finished"]
